# NAO

./: CMakeLists.txt  Grabber.cpp  Grabber.h  Motionizr.cpp  Motionizr.h  NaoFP.cpp  README.md  qiproject.xml  translate.cpp  xGamepad.cpp  xGamepad.h
